Lesson 6 final commit

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Zaida Carrion-Rodriguez
+    Date:   February 22, 2018
     Filename: index.html
    -->    
     
